# reed-s-narrator

./: .env.example  .gitignore  AGENTS.md  README.md  chat-故事叙述者程序设计.txt  pyproject.toml
config/: default.yaml
config/schemas/: action_whitelist.yaml
docs/: README.md  changelog.md  初版UserStory-系统架构设计.md  故事叙述者程序设计-核心用户观点.md  系统架构工作包拆分.md  系统架构设计方案.md  综合评审意见.md
scripts/: demo.py  narrate.py  replay.py  run.py
src/narrator/: __init__.py  config.py  demo.py  demo_runtime.py  demo_support.py  main.py  narrate.py  replay.py
src/narrator/agents/: __init__.py  character_agent.py  dm_agent.py  intent.py  retry.py
src/narrator/core/: __init__.py  clock.py  interrupt.py  rule_engine.py  seed.py  world_rules.py
src/narrator/knowledge/: __init__.py  belief_store.py  fact_store.py  propagation.py  runtime_helpers.py
src/narrator/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  router.py  schemas.py
src/narrator/models/: __init__.py  action.py  base.py  character.py  enums.py  event.py  knowledge.py  phenology.py  world.py
src/narrator/narrative/: __init__.py  assembler.py  models.py  writer.py
src/narrator/orchestrator/: __init__.py  event_pool.py  granularity.py  narrator_ctrl.py  spotlight.py  stages.py  tick_helpers.py
src/narrator/persistence/: __init__.py  checkpoint.py  database.py  (+2 more)
tests/integration/: replay_support.py  test_agent_flow.py  test_demo.py  test_isolation.py  test_main_loop.py  test_narrate_cli.py  test_replay.py  test_replay_tool.py  test_wp13_closed_loop.py
tests/unit/: test_config.py  test_demo_runtime.py  test_models.py
(+24 files in other folders)
