[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "reed-narrator"
version = "0.1.0"
description = "Narrative simulation scaffold for Reed's Narrator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "aiosqlite>=0.20.0,<0.21.0",
  "openai>=1.61.0,<2.0.0",
  "anthropic>=0.46.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
narrator-run = "narrator.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
